# sleek-coach

./: .claudeignore  .editorconfig  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  labeler.yml  (+1 more)
apps/api/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/auth/: __init__.py  dependencies.py  models.py  password.py  router.py  schemas.py  service.py  tokens.py
apps/api/app/checkins/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/app/coach_ai/: __init__.py  context_builder.py  models.py  orchestrator.py  router.py  schemas.py  service.py
apps/api/app/coach_ai/policies/: __init__.py  base.py  calorie_policy.py  eating_disorder_policy.py  engine.py  medical_claims_policy.py  weight_loss_policy.py
apps/api/app/coach_ai/prompts/: __init__.py  disclaimer_templates.py  system_prompts.py
apps/api/app/coach_ai/providers/: __init__.py  base.py  model_config.py  openai_provider.py
apps/api/app/coach_ai/tools/: __init__.py  adherence_tools.py  base.py  checkin_tools.py  nutrition_tools.py  registry.py  user_tools.py
apps/api/app/core/: datetime_utils.py
apps/api/app/integrations/: __init__.py  mfp_parser.py  router.py
apps/api/app/legal/: __init__.py  router.py  schemas.py
apps/api/app/middleware/: __init__.py  performance.py  rate_limit.py  request_id.py  security_headers.py
apps/api/app/nutrition/: __init__.py  calculator.py  models.py  router.py  schemas.py  service.py
apps/api/app/photos/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/app/storage/: __init__.py  s3_client.py
apps/api/app/users/: __init__.py  consent_service.py  models.py  router.py  schemas.py  service.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 0001_initial.py  0002_user_auth_tables.py  0003_checkins_photos.py  0004_nutrition.py  0005_ai_coach.py  0006_performance_indexes.py  0007_consent_tracking.py
apps/api/scripts/: seed.py  wait_for_db.py
apps/api/tests/: conftest.py
apps/api/tests/api/: test_auth.py  test_checkins.py  test_consent_endpoints.py  test_health.py  test_legal_endpoints.py  test_nutrition.py  test_photos.py  test_users.py
apps/api/tests/fixtures/: __init__.py  coach_fixtures.py  llm_mocks.py
apps/api/tests/integration/: __init__.py  conftest.py  test_db_connection.py
apps/api/tests/security/: conftest.py  test_auth_bypass.py  test_injection.py
apps/api/tests/unit/: test_auth_service.py  test_calorie_policy.py  test_checkin_service.py  test_coach_orchestrator.py  test_coach_service.py  test_coach_tools.py  test_consent_service.py  test_context_builder.py  test_datetime_utils.py  test_eating_disorder_policy.py  test_medical_claims_policy.py  test_mfp_parser.py  test_nutrition_service.py  test_password.py  test_photo_service.py  test_safety_policy_engine.py  test_tdee_calculator.py  test_tokens.py  test_tool_registry.py  test_user_service.py  test_weight_loss_policy.py
docs/: AI_COACH.md  API.md  DATABASE.md  MILESTONES.md  PERFORMANCE.md  PRD.md  RUNBOOK.md  SECURITY.md  TDD.md
infra/: .gitignore  README.md
(+226 files in other folders)
